--- a/client/src/app/components/user-home/user-products/user-products.scss
+++ b/client/src/app/components/user-home/user-products/user-products.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: 100%;
 
-  // header
   &--header {
     background-color: #5d5d5d;
     width: 100%;
@@ -74,16 +73,15 @@
       padding: 2rem;
       overflow-y: auto;
 
+
       &--container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
-        //justify-content: space-between;
         margin: 0 auto;
 
         &-no-products {
-          //margin-top: 3rem;
           width: 100%;
           color: #ee6e73;
           display: flex;
@@ -97,28 +95,35 @@
     }
 
     &-cart {
-      display: inherit;
+      display: flex;
       width: calc(100% - 70%);
-      //background-color: #3e8e41;
+      padding: 1rem;
       height: inherit;
-      //justify-content: center;
       flex-wrap: wrap;
       flex-direction: column;
+      justify-content: space-between;
 
-      &--single-product {
-        height: 80px;
-        display: inherit;
-        flex-direction: row;
+      &--header-items-wrapper {
+
+        &--header {
+          height: 2rem;
+        }
+
+        &--items {
+          height: 650px;
+          overflow-y: auto;
+          overflow-x: hidden;
+        }
+      }
+
+      &--checkoutDV {
+        display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
 
-        &-qnt {
-          justify-content: space-between;
-          align-items: center;
-
-          & p {
-            margin: 0;
-          }
+        & button {
+          width: 100%;
         }
       }
     }
