--- a/client/src/app/components/global-user-nav/global-user-nav.component.html
+++ b/client/src/app/components/global-user-nav/global-user-nav.component.html
@@ -22,10 +22,7 @@
       &&userAdminServiceService.isAdmin ===
        0">
         <li class="nav-item">
-          <a href="user" class="nav-link" routerLink="/user">Orders</a>
-        </li>
-        <li class="nav-item">
-          <a href="deliveries" class="nav-link" routerLink="/deliveries">Deliveries</a>
+          <a href="user-order-list" class="nav-link" routerLink="/user-order-list">Orders</a>
         </li>
       </div>
     </ul>
