--- a/client/src/app/components/user-home/user-products/user-products.scss
+++ b/client/src/app/components/user-home/user-products/user-products.scss
@@ -139,7 +139,7 @@
       transition: ease-in-out 1s;
       display: flex;
       width: calc(100% - 70%);
-      padding: 0 1rem;
+      padding: 0 1rem 1rem 1rem;
       //height: inherit;
       flex-wrap: wrap;
       flex-direction: column;
