--- a/client/src/app/components/global-user-nav/global-user-nav.component.scss
+++ b/client/src/app/components/global-user-nav/global-user-nav.component.scss
@@ -28,7 +28,32 @@
   justify-content: space-between;
 }
 
-.profile {
+.shoppingCart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 1.4rem;
+  position: relative;
+  margin-right: 2rem !important;
+
+  &--itemsCount {
+    font-size: 1rem;
+    position: absolute;
+    top: 0;
+    right: -1.2rem;
+    padding-left: 9px;
+    padding-right: 9px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    background-color: #ee6e73;
+    color: white;
+  }
+}
+
+.profile,
+.shoppingCart {
   margin-right: 1.1rem;
 }
 
@@ -38,4 +63,7 @@
   width: max-content;
   justify-content: center;
   align-items: center;
+  font-size: 1.2rem;
 }
+
+
