--- a/client/src/app/components/user-home/user-products/product-card/product-card.component.html
+++ b/client/src/app/components/user-home/user-products/product-card/product-card.component.html
@@ -9,27 +9,22 @@
     </div>
   </div>
 
-  <div class="form-group border-top product__card--add-product">
-    <div class="product__card--add-product-btns">
-      <button (click)="addOrSubtractQnt(2)" [disabled]="itemToSubmit.qnt <= 1"
-              class="btn btn-outline-secondary rounded-circle">
-        <i class="bi bi-dash-lg"></i>
-      </button>
-      <!--    [disabled]="itemToSubmit.qnt < 1"-->
-
-      <input (change)="checkItemQntBelowZero($event)"
-             [(ngModel)]="this.itemToSubmit.qnt"
-             [ngClass]="{'is-invalid': itemToSubmit.qnt < 1}"
-             class="form-control product__card--add-product-clicked-input"
-             type="text">
-      <button (click)="addOrSubtractQnt(1)" class="btn btn-outline-secondary rounded-circle">
-        <i class="bi bi-plus-lg"></i>
+  <div class="form-group product__card--add-product">
+    <div class="product__card--add-product-btnsDiv">
+      <div class="product__card--add-product-btnsDiv-btns">
+        <i (click)="addOrSubtractQnt(2)" [ngClass]="{'disabledBtn': disabledBtn}" class="bi bi-dash subtract-btn"
+           disabled="disabledBtn"></i>
+        <input (change)="checkItemQntBelowZero($event)"
+               [(ngModel)]="this.itemToSubmit.qnt"
+               [ngClass]="{'is-invalid': itemToSubmit.qnt < 1}"
+               class="form-control product__card--add-product-clicked-input"
+               type="text">
+        <i (click)="addOrSubtractQnt(1)" class="bi bi-plus add-btn"></i>
+      </div>
+      <button (click)="submitProductToOrder()"
+              class="btn btn-outline-primary product__card--add-product-add-to-cart-btn">
+        Add to cart
       </button>
     </div>
-
-    <button (click)="submitProductToOrder()" class="btn btn-outline-primary product__card--add-product-add-to-cart-btn">
-      Add to cart
-    </button>
   </div>
-
 </div>
