--- a/client/src/app/components/global-user-nav/global-user-nav.component.scss
+++ b/client/src/app/components/global-user-nav/global-user-nav.component.scss
@@ -57,6 +57,10 @@
   margin-right: 1.1rem;
 }
 
+.fa-history {
+  margin-right: 10px;
+}
+
 .profile,
 .logout {
   display: flex;
@@ -65,5 +69,31 @@
   align-items: center;
   font-size: 1.2rem;
 }
+
+@media screen and (min-width: 320px) {
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 991px) {
+  .shoppingCart {
+    width: max-content;
+    position: relative;
+
+    &--itemsCount {
+      position: absolute;
+      top: 0;
+      right: -1.2rem;
+    }
+  }
+
+  .navbar-profile-div {
+    .profile, .logout {
+      & i {
+        margin-right: 8px;
+      }
+    }
+  }
+}
+
 
 
