--- a/client/src/app/components/user-home/user-cart-single-product/user-cart-single-product.component.html
+++ b/client/src/app/components/user-home/user-cart-single-product/user-cart-single-product.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3 home__user--main-cart--single-product">
+<div class="row home__user--main-cart--single-product">
   <div class="col-2 home__user--main-cart--single-product-image">
     <img alt="" class="card-img-top" src="{{'http://localhost:8080/'+singleShoppingCartItem.product?.filename}}">
   </div>
