--- a/client/src/app/components/user-home/user-orders/user-orders.component.scss
+++ b/client/src/app/components/user-home/user-orders/user-orders.component.scss
@@ -23,7 +23,7 @@
     width: 50%;
     border-right: .1px solid rgba(0, 0, 0, .1);
 
-    &--header-body {
+    &--header {
 
       & header {
         display: flex;
@@ -79,6 +79,31 @@
         width: 100%;
         text-align: end;
       }
+    }
+  }
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 1100px) {
+  .orders__page {
+
+    &--shopping-cart-review {
+      width: 100%;
+      height: 600px;
+
+      &--header {
+        margin-bottom: 1rem;
+      }
+
+      &--body {
+        height: 85%;
+        overflow-y: auto;
+      }
+    }
+
+    &--form--details {
+      width: 100%;
+      //height: 50%;
     }
   }
 }
