--- a/client/src/app/components/user-home/user-products/product-card/product-card.component.scss
+++ b/client/src/app/components/user-home/user-products/product-card/product-card.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   //margin-right: 1rem;
   margin-bottom: 1.2rem;
-  min-height: 450px;
+  min-height: 350px;
   border-width: .5px;
   border-color: rgba(0, 0, 0, .15);
   flex-direction: column;
@@ -42,19 +42,56 @@
     flex-direction: column;
     //justify-content: space-between;
 
-    &-btns {
-      padding: .5rem 0;
+    &-btnsDiv {
+      padding: 0 1rem 1.2rem;
       display: inline-flex;
       justify-content: space-evenly;
+
       //border-bottom: 1px solid rgba(0, 0, 0, .2);
+      &-btns {
+        display: flex;
+
+        & i {
+          cursor: pointer;
+          font-size: 1.6rem;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+
+      & .btn {
+        padding: .5rem .4rem;
+      }
     }
 
     &-clicked-input {
-      max-width: 50%;
+      text-align: center;
+      width: 3rem;
+      border: none;
+      border-bottom: .1px solid rgba(0, 0, 0, .2);
+      border-radius: 0;
     }
 
     &-add-to-cart-btn {
-      width: 100%;
+      width: max-content;
     }
   }
 }
+
+.disabledBtn {
+  opacity: 0.6;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.subtract-btn {
+  color: #bb2d3b;
+}
+
+.add-btn {
+  color: #50bd4d;
+}
+
+
