--- a/client/src/app/components/user-home/user-products/user-products.scss
+++ b/client/src/app/components/user-home/user-products/user-products.scss
@@ -3,7 +3,6 @@
 .home__user {
   width: 100%;
   min-width: 100%;
-  height: 100%;
   //margin: 0 auto;
   //max-width: 1600px;
 
@@ -68,15 +67,16 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    height: calc(100vh - 250px);
-    min-height: calc(100vh - 220px);
+    //height: calc(100vh - 250px);
+    //min-height: calc(100vh - 220px);
     position: relative;
 
-    &--searchProducts {
-      margin: 1rem 0;
+    &--openCloseCart {
+      //margin: 1rem 0;
       position: relative;
 
       &--hide-cart {
+        z-index: 999;
         position: absolute;
         top: 10px;
         right: 15px;
@@ -104,17 +104,15 @@
 
 
     &-products {
-      min-width: 70%;
-      height: calc(100vh - 23vh);
       width: 70%;
-      padding: 0 1rem;
       overflow-y: auto;
+      padding: 0 1rem;
 
       & header {
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         margin-bottom: 1rem;
-        margin-left: 5%;
+        margin-top: 1rem;
       }
 
       &--container {
@@ -136,7 +134,6 @@
     }
 
     &-cart {
-      transition: ease-in-out 1s;
       display: flex;
       width: calc(100% - 70%);
       padding: 0 1rem 1rem 1rem;
@@ -187,29 +184,30 @@
   }
 }
 
+.scrollable {
+  height: 100%;
+  overflow-y: auto;
+}
+
 .hideCart {
   display: none;
   visibility: hidden;
   width: 0;
 }
 
-.showCart {
-  width: calc(100% - 70%);
-  position: relative;
-
-}
 
 .products-full-width {
-  max-width: 100%;
+  //max-width: 100%;
   width: 100%;
 }
 
 .search-bar {
   width: 50%;
-  margin: 0 auto;
+  margin: 0 auto 2rem auto;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   border: solid .2px rgba(0, 0, 0, .15);
+  height: max-content !important;
 
   & input {
     background-color: white;
@@ -220,4 +218,95 @@
       outline: none !important;
     }
   }
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .home__user {
+    &--main {
+      position: relative;
+
+      &-products {
+        //width: 100%;
+      }
+
+
+      &-cart {
+        background-color: white;
+        position: absolute;
+        display: flex;
+        width: 100%;
+        z-index: 99;
+        padding: 0 1rem 1rem 1rem;
+        //height: inherit;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &--header-items-wrapper {
+          margin-top: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+  .home__user {
+    &--main {
+
+      &-cart {
+        background-color: white;
+        position: absolute;
+        display: flex;
+        width: 100%;
+        z-index: 99;
+        padding: 0 1rem 1rem 1rem;
+        //height: inherit;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+
+        &--header-items-wrapper {
+          margin-top: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 961px) and (max-width: 1199px) {
+  .home__user {
+    &--main {
+      width: 100%;
+
+      &-products {
+        width: 60%;
+      }
+
+      &-cart {
+        background-color: white;
+        position: relative;
+        right: 0;
+        display: flex;
+        width: 40%;
+        z-index: 99;
+        padding: 0 1rem 1rem 1rem;
+        //height: inherit;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &--header-items-wrapper {
+          margin-top: 2rem;
+        }
+      }
+    }
+  }
+
+}
+
+
+@media screen and (min-width: 1201px) {
 }
