--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -25,24 +25,26 @@
   }
 }
 
+html {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  height: 100% !important;
+  width: 100% !important;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;700;800&display=swap');
 
-.hide {
-  display: none;
-  visibility: hidden;
-  height: 0;
-  width: 0;
-}
 
 .row {
   margin: 0;
 }
 
 body {
-  margin: 0 auto;
   font-family: 'JetBrains Mono', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  //overflow-y: hidden;
 }
 
 
